add ability to colour within clusters to main org file

--- a/index2.org
+++ b/index2.org
@@ -8445,7 +8445,7 @@ Rsquared.glm(glm.D93)
   #' @param clusters_col optional column identifying clusters
   #' @param todo_col optional column with TODO status (DONE and WONTDO will be white, others are red)
   #' @return character string object that has the DOT language representatio of the input
-  newnode <- function(indat, names_col = NULL, in_col = NULL, out_col = NULL, desc_col = NULL, clusters_col = NULL, todo_col = NULL, nchar_to_snip = 40){
+  newnode <- function(indat, names_col = NULL, in_col = NULL, out_col = NULL, desc_col = NULL, clusters_col = NULL, todo_col = NULL, nchar_to_snip = 40, colour_col = NULL){
   if (is.null(names_col)) stop("Names of the steps are needed")
   if (is.null(in_col)) stop("Inputs are needed")
   if (is.null(out_col)) stop("Outputs are needed")
@@ -8500,26 +8500,35 @@ Rsquared.glm(glm.D93)
         outputs_listed <- paste(name2paste, outputs, sep = ' -> ', collapse = "\n")
         #cat(outputs_listed)
   if(!is.null(todo_col)){
-        
-        status <- indat2[i,todo_col]      
-        
-  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description | Status } | { %s | %s | %s } }}"]\n%s\n\n',
+  
+        status <- indat2[i,todo_col]
+  
+  strng <- sprintf('%s\n%s  [ shape=record, style = \"filled\", fillcolor=\"white\", label="{{ { Name | Description | Status } | { %s | %s | %s } }}"]\n%s\n\n',
                    inputs_listed, name2paste, name, desc, status, outputs_listed
                    )
         # cat(strng)
-        if(!status %in% c("DONE", "WONTDO", "", NA)){ 
-          strng <- gsub("shape=record,", "shape=record, style = \"filled\", color=\"indianred\",", strng)
+        if(!status %in% c("DONE", "WONTDO", "", NA)){
+          strng <- gsub("shape=record,", "shape=record, style = \"filled\", fillcolor=\"indianred\",", strng)
         }
       } else {
-    
-  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
+  
+  strng <- sprintf('%s\n%s  [ shape=record, style = \"filled\", fillcolor=\"white\", label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
                    inputs_listed, name2paste, name, desc, outputs_listed
                    )
   }
         nodes_graph <- paste(nodes_graph, strng, "\n")
         if(nrow(indat2) == 1) break
-      }
-  nodes_graph <- paste(nodes_graph, "}\n\n")
+  
+  
+        # cat(nodes_graph)
+        # set col
+        if(!is.na(indat2[i,colour_col])){
+         nodes_graph <- gsub("white", indat2[i,colour_col], nodes_graph)
+        }
+  }
+  #cat(nodes_graph)
+  ###########
+    nodes_graph <- paste(nodes_graph, "}\n\n")
   }
   } else {
     indat2 <- indat
@@ -8555,8 +8564,8 @@ Rsquared.glm(glm.D93)
           strng <- gsub("shape=record,", "shape=record, style = \"filled\", color=\"indianred\",", strng)
         }
   } else {
-    
-  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
+  
+  strng <- sprintf('%s\n%s  [ shape=record, style = \"filled\", fillcolor=\"white\", label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
                    inputs_listed, name2paste, name, desc, outputs_listed
                    )
   }
@@ -8590,8 +8599,8 @@ Rsquared.glm(glm.D93)
   library(disentangle)
   library(devtools)
   #document()
-  #load_all()
-  source("R/newnode.r")
+  load_all()
+  #source("R/newnode.r")
   library(stringr)
   ## filesList <- read.csv(textConnection('
   ## CLUSTER ,  STEP    , INPUTS                    , OUTPUTS                                , DESCRIPTION                      
