--- a/index2.org
+++ b/index2.org
@@ -8556,21 +8556,35 @@ Rsquared.glm(glm.D93)
   if(!is.null(todo_col)){
     status <- indat2[i,todo_col]
          
-  strng <- sprintf('%s\n%s  [ shape=record, label="{{ { Name | Description | Status } | { %s | %s | %s } }}"]\n%s\n\n',
+  strng <- sprintf('%s\n%s  [ shape=record, style = \"filled\", fillcolor=\"white\", label="{{ { Name | Description | Status } | { %s | %s | %s } }}"]\n%s\n\n',
                    inputs_listed, name2paste, name, desc, status, outputs_listed
                    )
         # cat(strng)
         if(!status %in% c("DONE", "WONTDO", "", NA)){ 
           strng <- gsub("shape=record,", "shape=record, style = \"filled\", color=\"indianred\",", strng)
         }
+  
+        # set col
+        if(!is.na(indat2[i,colour_col])){
+         strng <- gsub("white", indat2[i,colour_col], strng)
+        }
+  
   } else {
   
   strng <- sprintf('%s\n%s  [ shape=record, style = \"filled\", fillcolor=\"white\", label="{{ { Name | Description } | { %s | %s } }}"]\n%s\n\n',
                    inputs_listed, name2paste, name, desc, outputs_listed
                    )
+        # set col
+        if(!is.na(indat2[i,colour_col])){
+         strng <- gsub("white", indat2[i,colour_col], strng)
+        }
+  
   }
+  
+  
         nodes_graph <- paste(nodes_graph, strng, "\n")
   }
+  #  cat(nodes_graph)
   }
   nodes_graph <- paste("digraph transformations {\n\n",
                        nodes_graph,
@@ -8596,10 +8610,11 @@ Rsquared.glm(glm.D93)
 *** COMMENT test-newnode
 
 #+begin_src R :session *R* :tangle tests/test-newnode.r :exports none :eval yes
-  library(disentangle)
   library(devtools)
   #document()
-  load_all()
+  #load_all()
+  install_github("ivanhanigan/disentangle", ref = "gh-pages")
+  library(disentangle)
   #source("R/newnode.r")
   library(stringr)
   ## filesList <- read.csv(textConnection('
